--- a/package/templates/package/register.html
+++ b/package/templates/package/register.html
@@ -26,7 +26,7 @@
                     </form>
                 </div>
                 <div class="panel-footer">
-                    Already have an account? <a href=" ">Click here</a> to log in.
+                    Already have an account? <a href=" {% url 'package:login' %}">Click here</a> to log in.
                 </div>
             </div>
         </div>
