--- a/package/templates/package/register.html
+++ b/package/templates/package/register.html
@@ -1,6 +1,4 @@
-
-{% extends 'package/base.html' %}
-
+{% extends 'package/base_visitor.html' %}
 {% block title %}Register{% endblock %}
 {% block register_active %}active{% endblock %}
 
