--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="#">
+                    <a href="{% url 'package:logout_user' %}">
                         <span class="glyphicon glyphicon-off" aria-haspopup="true"></span>&nbsp;LogOut
                     </a>
                 </li>
