--- a/package/templates/package/index.html
+++ b/package/templates/package/index.html
@@ -9,8 +9,8 @@
         <div class="col-sm-12">
             <h3>{{ user.username }}'s Package</h3>
         </div>
-        {% if packages %}
-            {% for package in packages %}
+        {% if albums %}
+            {% for album in albums %}
                 <div class="col-sm-4 col-lg-2">
                     <div class="thumbnail">
                         <a href="{% url 'package:detail' package.id %}">
@@ -43,7 +43,7 @@
     </div>
 
     <!-- If user searches and there are songs -->
-\
+
 
 </div>
 {% endblock %}
