--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -46,7 +46,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
-                    <a href="#">
+                    <a href="{% url 'package:create_package' %}">
                         <span class="glyphicon glyphicon-plus" aria-haspopup="true"></span>&nbsp;Add Packages
                     </a>
                 </li>
