can work in login and register, and add package, and work well can add

--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="{% url 'package:index' %}">
+                    <a href="#">
                         <span class="glyphicon glyphicon-inbox" aria-haspopup="true"></span>&nbsp;Details
                     </a>
                 </li>
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="{% url 'package:login' %}">
+                    <a href="{% url 'package:logout_user' %}">
                         <span class="glyphicon glyphicon-off" aria-haspopup="true"></span>&nbsp;LogOut
                     </a>
                 </li>
