--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="{% url 'package:logout_user' %}">
+                    <a href="{% url 'package:login' %}">
                         <span class="glyphicon glyphicon-off" aria-haspopup="true"></span>&nbsp;LogOut
                     </a>
                 </li>
@@ -68,5 +68,25 @@
     </nav>
 {% block body %}
 {% endblock %}
+<!-- Footer -->
+       <footer class="footer">
+    <div class="footer navbar-fixed-bottom">
+        <div class="container">
+            <div class="text-center center-block">
+                <p class="txt-railway">- package.com </p>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
+                <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
+                <a href="mailto:bootsnipp@gmail.com"><i class="fa fa-envelope-square fa-3x social"></i></a>
+                <br /><br />
+                <p class="copyright">&copy; Stevens EE 551 Group
+                    <a href="">base_VISITOR</a>
+                    <hr />
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+        </footer>
 </body>
 </html>
