--- a/package/templates/package/base_visitor.html
+++ b/package/templates/package/base_visitor.html
@@ -3,45 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Package{% endblock %}</title>
-        <!--loads the path to yur static files -->
-    {% load staticfiles%}
+    <!--loads the path to yur static files -->
+    {% load staticfiles %}
     <!-- Latest compiled and minified CSS -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'package/style.css' %}"/>
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--built bar-->
-
+    <link rel="stylesheet" type="text/css" href="{% static 'package/style.css' %}"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+          crossorigin="anonymous">
 </head>
 <body>
-   <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+<header>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
 
-        <!-- Header -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'package:index' %}">Package</a>
+            <!-- Header -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'package:index' %}">Package</a>
+            </div>
+
+            <!-- Items -->
+            <div class="collapse navbar-collapse" id="topNavBar">
+                <ul class="nav navbar-nav">
+                    <li class="{% block register_active %} register {% endblock %}"><a
+                            href="{% url 'package:register' %}">Register</a></li>
+                    <li class="{% block login_active %}login {% endblock %}"><a href="{% url 'package:login' %}">Log
+                        In</a></li>
+                </ul>
+            </div>
+
         </div>
+    </nav>
+</header>
+<main>
+    {% block body %}
+    {% endblock %}
+</main>
+<!-- Footer -->
 
-        <!-- Items -->
-        <div class="collapse navbar-collapse" id="topNavBar">
-            <ul class="nav navbar-nav">
-                <li class="{% block register_active %} register {% endblock %}"><a href="{% url 'package:register' %}">Register</a></li>
-                <li class="{% block login_active %}login {% endblock %}"><a href="{% url 'package:login' %}">Log In</a></li>
-            </ul>
+
+<footer class="footer">
+    <div class="footer navbar-fixed-bottom">
+        <div class="container">
+            <div class="text-center center-block">
+                <p class="txt-railway">- package.com </p>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
+                <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
+                <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
+                <a href="mailto:bootsnipp@gmail.com"><i class="fa fa-envelope-square fa-3x social"></i></a>
+                <br /><br />
+                <p class="copyright">&copy; Stevens EE 551 Group
+                    <a href="">base_VISITOR</a>
+                    <hr />
+                </p>
+            </div>
         </div>
-
     </div>
-</nav>
-{% block body %}
-{% endblock %}
+</footer>
 </body>
 </html>
