--- a/package/templates/package/index.html
+++ b/package/templates/package/index.html
@@ -1,49 +1,37 @@
-{% extends 'package/base.html' %}
+{% extends 'package/base_visitor.html' %}
 {% block albums_active %}active{% endblock %}
-
+{% load staticfiles %}
 {% block body %}
-<div class="albums-container container-fluid">
+     <!-- Slider -->
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="col-xs-12" id="slider">
+                    <!-- Top part of the slider -->
+                    <div class="row">
+                        <div class="col-sm-12" id="carousel-bounding-box">
+                            <div class="carousel slide" id="myCarousel">
+                                <!-- Carousel items -->
+                                <div class="carousel-inner">
+                                    <div class="active item" data-slide-number="0">
+                                        <img src="/package/static/package/images/package3.jpg"></div>
 
-    <!-- Packages -->
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>{{ user.username }}'s Package</h3>
-        </div>
-        {% if albums %}
-            {% for album in albums %}
-                <div class="col-sm-4 col-lg-2">
-                    <div class="thumbnail">
-                        <a href="{% url 'package:detail' package.id %}">
-                            <img src="{{ package.company_logo.url }}" class="img-responsive">
-                        </a>
-                        <div class="caption">
-                            <h2>{{ package.package_trcaking_num }}</h2>
-                            <h4>{{ package.type }}</h4>
-
-                            <!-- View Details -->
-                            <a href="{% url 'package:detail' package.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
+                                    <div class="item" data-slide-number="1">
+                                        <img src=/package/static/package/images/package1.jpg></div>
 
 
-
+                                </div>
+                                <!-- Carousel nav -->
+                                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                </a>
+                                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                {% cycle '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
-            {% endfor %}
-        {% else %}
-            <div class="col-sm-12">
-                <br>
-                <a href="{% url 'package:create_package' %}">
-                    <button type="button" class="btn btn-success">
-                        <span class="glyphicon glyphicon-plus"></span>&nbsp; Add an Package
-                    </button>
-                </a>
             </div>
-        {% endif %}
-    </div>
-
-    <!-- If user searches and there are songs -->
-
-
-</div>
+        </div>
+            <!--/Slider-->
 {% endblock %}
