--- a/package/static/package/style.css
+++ b/package/static/package/style.css
@@ -44,3 +44,122 @@ ul.errorlist > li {
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
     width: 100%;
 }
+
+
+.margin-t70 {margin-top:70px;}
+/***************** Carousel CSS **************/
+.item img {width:100%; max-height:450px;display: block;}
+.caraous-title {
+    position: absolute;
+    top: 20%;
+    left: 15.8%;
+    right: auto;
+    width: 96.66666666666666%;
+    color: #000;
+}
+.caraous-title h1 {color:#000;font-size:45px; font-weight:400;}
+.caraous-title h3 {margin-bottom:30px;color:#dd0000;font-size:20px;}
+.caraous-title span {color:#000;font-size:20px;}
+.caraous-img-box img {width:50%;}
+/* Button */
+.site-btn{padding:12px 25px 12px 25px;background:#000;border:transparent;font-size:19px;}
+.site-btn:hover{background:#696969 ;border:transparent;}
+
+/************************* Navigation ********/
+.caret-up {
+  width: 0;
+  height: 0;
+  border-left: 4px solid rgba(0, 0, 0, 0);
+  border-right: 4px solid rgba(0, 0, 0, 0);
+  border-bottom: 4px solid;
+
+  display: inline-block;
+  margin-left: 2px;
+  vertical-align: middle;
+}
+.dropdown-menu {padding:0px;}
+.dropdown-menu > li > a {
+color: #514f4f;
+text-decoration: none;
+background-color: #fff   ;
+}
+.dropdown-menu > li > a:hover {
+color: #fff;
+text-decoration: none;
+background-color: #003b4d       ;
+}
+.dropdown-menu > li > a {padding:8px; border-bottom:1px solid #e2e2e2;}
+
+.navbar-default {
+  background-color: #fff   ;
+  padding:25px 0px 15px 0px;
+  font-weight:400;
+  letter-spacing:2px;
+  font-size:16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+.navbar-default .navbar-brand {
+  color: #9d9d9d;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #d21300;
+}
+.navbar-default .navbar-text {
+  color: #9d9d9d;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #9d9d9d;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #d21300;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #d21300;
+  background-color: #ffffff;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #d21300;
+  background-color: #ffffff;
+}
+.navbar-default .navbar-toggle {
+  border-color: #ffffff;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #ffffff;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #9d9d9d;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #9d9d9d;
+}
+.navbar-default .navbar-link {
+  color: #9d9d9d;
+}
+.navbar-default .navbar-link:hover {
+  color: #d21300;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #9d9d9d;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #d21300;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #d21300;
+    background-color: #ffffff;
+  }
+}
