change the index page to galllery style

--- a/package/templates/package/base_visitor.html
+++ b/package/templates/package/base_visitor.html
@@ -22,8 +22,8 @@
           crossorigin="anonymous">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-inverse">
+<header >
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
 
             <!-- Header -->
@@ -49,18 +49,17 @@
         </div>
     </nav>
 </header>
-<main>
+<main class="page-header">
     {% block body %}
     {% endblock %}
 </main>
-<!-- Footer -->
-
-
-<footer class="footer">
-    <div class="footer navbar-fixed-bottom">
-        <div class="container">
-            <div class="text-center center-block">
-                <p class="txt-railway">- package.com </p>
+<!--footer-->
+<footer id="footer">
+    <div class="navbar-fixed-bottom">
+      <div class="container">
+       <div class="container text-center">
+    <hr />
+ <p class="txt-railway">- package.com </p>
                 <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
                 <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
@@ -68,11 +67,12 @@
                 <br /><br />
                 <p class="copyright">&copy; Stevens EE 551 Group
                     <a href="">base_VISITOR</a>
-                    <hr />
+                    <br />
                 </p>
-            </div>
+</div>
+      </div>
         </div>
-    </div>
-</footer>
+    </footer>
+	<!-- ./Footer -->
 </body>
 </html>
