--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -3,32 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Package{% endblock %}</title>
-        <!--loads the path to yur static files -->
-    {% load staticfiles%}
+    <!--loads the path to yur static files -->
+    {% load staticfiles %}
     <!-- Latest compiled and minified CSS -->
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'package/style.css' %}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--built bar-->
-
+    <link rel="stylesheet" type="text/css" href="{% static 'package/style.css' %}"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+          crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <!--logo-->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'package:index' %}">Package</a>
-            </div>
+<header>
+
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <!--logo-->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Package</a>
+        </div>
         <!--items-->
         <div class="collapse navbar-collapse" id="#topNavBar">
             <ul class="nav navbar-nav">
@@ -56,7 +62,7 @@
                     </a>
                 </li>
             </ul>
-              <form class="navbar-form navbar-right" role="search" methon="get" action="#">
+            <form class="navbar-form navbar-right" role="search" methon="get" action="#">
                 <div class="form-group">
                     <input type="text" class="=form-control" name="q" value="#">
                 </div>
@@ -64,30 +70,34 @@
             </form>
 
         </div>
-        </div>
-    </nav>
-{% block body %}
-{% endblock %}
-<!-- Footer -->
-    <br />
-       <footer class="footer">
-    <div class="footer navbar-fixed-bottom">
+    </div>
+</nav>
+</header>
+<main class="page-header">
+    {% block body %}
+    {% endblock %}
+</main>
+<!--footer-->
+<footer id="footer">
+    <div class="navbar-fixed-bottom">
         <div class="container">
-            <div class="text-center center-block">
+            <div class="container text-center">
+                <hr/>
                 <p class="txt-railway">- package.com </p>
                 <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
                 <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
                 <a href="mailto:bootsnipp@gmail.com"><i class="fa fa-envelope-square fa-3x social"></i></a>
-                <br /><br />
+                <br/><br/>
                 <p class="copyright">&copy; Stevens EE 551 Group
-                    <a href="">base_VISITOR</a>
-                    <br />
+                    <a href="">base</a>
+                    <br/>
                 </p>
             </div>
         </div>
     </div>
 </footer>
+<!-- ./Footer -->
 
 </body>
 </html>
