--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -56,6 +56,12 @@
                         <span class="glyphicon glyphicon-plus" aria-haspopup="true"></span>&nbsp;Add Packages
                     </a>
                 </li>
+
+                <li class="">
+                    <a href="{% url 'package:profile' %}">
+                        <span class="glyphicon glyphicon-user" aria-haspopup="true"></span>&nbsp;Profile
+                    </a>
+                </li>
                 <li class="">
                     <a href="{% url 'package:login' %}">
                         <span class="glyphicon glyphicon-off" aria-haspopup="true"></span>&nbsp;LogOut
