--- a/package/templates/package/index.html
+++ b/package/templates/package/index.html
@@ -2,48 +2,57 @@
 {% block albums_active %}active{% endblock %}
 
 {% block body %}
-<div class="albums-container container-fluid">
+    <div class="albums-container container-fluid">
 
-    <!-- Packages -->
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>{{ user.username }}'s Package</h3>
-        </div>
-        {% if packages %}
-            {% for package in packages %}
-                <div class="col-sm-4 col-lg-2">
-                    <div class="thumbnail">
-                        <a href="{% url 'package:detail' package.id %}">
-                            <img src="{{ package.company_logo.url }}" class="img-responsive">
-                        </a>
-                        <div class="caption">
-                            <h2>{{ package.package_trcaking_num }}</h2>
-                            <h4>{{ package.type }}</h4>
+        <!-- Packages -->
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>{{ user.username }}'s Package</h3>
+            </div>
+            {% if packages %}
+                {% for package in packages %}
+                    <div class="col-sm-4 col-lg-2">
+                        <div class="thumbnail">
+                            <a href="{% url 'package:detail' package.id %}">
+                                <img src="{{ package.company_logo.url }}" class="img-responsive">
+                            </a>
+                            <div class="caption">
+                                <h2>{{ package.tracking_num }}</h2>
+                                <h4>{{ package.package_type }}</h4>
 
-                            <!-- View Details -->
-                            <a href="{% url 'package:detail' package.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
-<!--<a href="url 'package:detail' package.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>-->
+                                <!-- View Details -->
+                                <a href="{% url 'package:detail' package.id %}" class="btn btn-primary btn-sm"
+                                   role="button">View Details</a>
+                                <!--<a href="url 'package:detail' package.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>-->
+                                <!-- Delete Album -->
+                                <form action="{% url 'package:delete_package' package.id %}" method="post"
+                                      style="display: inline;">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="album_id" value="{{ package.id }}"/>
+                                    <button type="submit" class="btn btn-default btn-sm">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </form>
 
-
+                            </div>
                         </div>
                     </div>
+                    {% cycle '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
+                {% endfor %}
+            {% else %}
+                <div class="col-sm-12">
+                    <br>
+                    <a href="{% url 'package:create_package' %}">
+                        <button type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-plus"></span>&nbsp; Add an Package
+                        </button>
+                    </a>
                 </div>
-                {% cycle '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
-            {% endfor %}
-        {% else %}
-            <div class="col-sm-12">
-                <br>
-                <a href="{% url 'package:create_package' %}">
-                    <button type="button" class="btn btn-success">
-                        <span class="glyphicon glyphicon-plus"></span>&nbsp; Add an Package
-                    </button>
-                </a>
-            </div>
-        {% endif %}
+            {% endif %}
+        </div>
+
+        <!-- If user searches and there are songs -->
+
+
     </div>
-
-    <!-- If user searches and there are songs -->
-
-
-</div>
 {% endblock %}
