everything and profile page work well

--- a/package/templates/package/base_visitor.html
+++ b/package/templates/package/base_visitor.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'package:index' %}">Package</a>
+                <a class="navbar-brand" href="{% url 'package:index_v' %}">Packagee</a>
             </div>
 
             <!-- Items -->
