--- a/package/templates/package/register.html
+++ b/package/templates/package/register.html
@@ -30,6 +30,19 @@
                 </div>
             </div>
         </div>
+       <div class="col-sm-12 col-md-5">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <h3>What is 'Packagee'?</h3>
+                    <p>Packagee is a website that allows you to management all of your packages on the cloud.</p>
+                    <h3>How do I add package?</h3>
+                    <p>First, create a new package by filling out the form on the page.</p>
+                    <p>Second, you can tracking your package and know which package is delivered.</p>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
