--- a/package/templates/package/base.html
+++ b/package/templates/package/base.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Package</a>
+            <a class="navbar-brand" href="{% url 'package:index_v' %}">Packagee</a>
         </div>
         <!--items-->
         <div class="collapse navbar-collapse" id="#topNavBar">
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="container text-center">
                 <hr/>
-                <p class="txt-railway">- package.com </p>
+                <p class="txt-railway">- packagee.com </p>
                 <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
                 <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
