change the database and work well

--- a/package/templates/package/register.html
+++ b/package/templates/package/register.html
@@ -37,7 +37,7 @@
                     <p>Packagee is a website that allows you to management all of your packages on the cloud.</p>
                     <h3>How do I add package?</h3>
                     <p>First, create a new package by filling out the form on the page.</p>
-                    <p>Second, you can tracking your package and know which package is delivered.</p>
+                    <p>Second, you can tracking your package and know which package is delivered</p>
 
                     </ul>
                 </div>
