--- a/package/templates/package/base_visitor.html
+++ b/package/templates/package/base_visitor.html
@@ -45,7 +45,6 @@
                         In</a></li>
                 </ul>
             </div>
-
         </div>
     </nav>
 </header>
@@ -59,7 +58,7 @@
         <div class="container">
             <div class="container text-center">
                 <hr/>
-                <p class="txt-railway">- package.com </p>
+                <p class="txt-railway">- packagee.com </p>
                 <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-3x social"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-twitter-square fa-3x social"></i></a>
                 <a href="https://plus.google.com/"><i class="fa fa-google-plus-square fa-3x social"></i></a>
