--- a/package/templates/package/login.html
+++ b/package/templates/package/login.html
@@ -46,18 +46,12 @@
            <div class="col-sm-12 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <h3>What is Viberr?</h3>
-                    <p>Viberr is an app that allows you to upload and store all of your music on the cloud.</p>
-                    <h3>How do I add music?</h3>
-                    <p>First, create a new album by filling out the form on this page. Once an album is created you will
-                        be
-                        able to add/upload songs.</p>
-                    <h3>What are some Album logo best practices?</h3>
-                    <ul>
-                        <li>Have a resolution of 512x512</li>
-                        <li>Use common image formats such as .JPG, .GIF, or .PNG</li>
-                        <li>Remain under the 2MB limit.</li>
-                        <li>Square images look best</li>
+                    <h3>What is 'Packagee'?</h3>
+                    <p>Packagee is a website that allows you to management all of your packages on the cloud.</p>
+                    <h3>How do I add package?</h3>
+                    <p>First, create a new package by filling out the form on the page.</p>
+                    <p>Second, you can tracking your package and know which package is delivered.</p>
+
                     </ul>
                 </div>
             </div>
