--- a/package/templates/package/index.html
+++ b/package/templates/package/index.html
@@ -11,14 +11,15 @@
             </div>
             {% if packages %}
                 {% for package in packages %}
-                    <div class="col-sm-4 col-lg-2">
+                    <div class="col-sm-4 col-lg-4">
                         <div class="thumbnail">
                             <a href="{% url 'package:detail' package.id %}">
                                 <img src="{{ package.company_logo.url }}" class="img-responsive">
                             </a>
                             <div class="caption">
-                                <h2>{{ package.tracking_num }}</h2>
-                                <h4>{{ package.package_type }}</h4>
+                                <h2>Type: {{ package.package_type }}</h2>
+                                <h4>Package Company: {{ package.package_company }}</h4>
+                                <h5>Saler: {{ package.staff_company }}</h5>
 
                                 <!-- View Details -->
                                 <a href="{% url 'package:detail' package.id %}" class="btn btn-primary btn-sm"
